--- a/spring-2015-msan622/homework2.html
+++ b/spring-2015-msan622/homework2.html
@@ -51,6 +51,17 @@
     .axis2 text {
         font: 10px sans-serif;
     }
+    .axis3 line,
+    .axis3 path {
+    fill: none;
+    stroke: #000;
+    shape-rendering: crispEdges;
+    }
+    
+    .axis3 text {
+        font: 10px sans-serif;
+        text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;
+    }
     .d3-tip {
       line-height: 1;
       font-weight: bold;
@@ -100,8 +111,6 @@
       text-align: center;
     }
 
-
-    /* Westward tooltips */
     .d3-tip2.n:after {
         margin: -3px 0 0 0;
         top: 100%;
@@ -118,6 +127,17 @@
       font: 10px sans-serif;
       text-anchor: middle;
     }
+
+    .clegend circle {
+    fill: none;
+    stroke: #ccc;
+    }
+
+    .clegend text {
+      fill: #777;
+      font: 10px sans-serif;
+      text-anchor: middle;
+    }
     
     .chart {
       float: left;
@@ -127,6 +147,22 @@
       padding-left:0;
     }
 
+    .background path {
+      fill: none;
+      stroke: #ddd;
+      shape-rendering: crispEdges;
+    }
+
+    .foreground path {
+      fill: none;
+      stroke: steelblue;
+    }
+
+    .brush .extent {
+      fill-opacity: .3;
+      stroke: #fff;
+      shape-rendering: crispEdges;
+    }
 
 </style>
 
@@ -147,14 +183,15 @@ var margin = {top: 50, right: 20, bottom: 40, left: 70},
     height = 500 - margin.top - margin.bottom;
 
 var formatting = d3.format(",.0f");
-
+// set color scale for regions
+var color = d3.scale.category10();
 
 // load json file and call draw function
 d3.json("state.x77.json", function(error, json) {
 
   data = json;
-  drawBubbles(data);
-  smallMultiples(data);
+  // drawBubbles(data);
+  // smallMultiples(data);
   parallels(data);
 });
 
@@ -177,8 +214,6 @@ function drawBubbles(data) {
         svg.selectAll("circle")
         .style("opacity", function (d) { opacity(d.murder); });
     }
-    // set color scale for regions
-    var color = d3.scale.category10();
 
     // set X domain to state income
     var x = d3.scale.linear()
@@ -293,6 +328,23 @@ function drawBubbles(data) {
       .style("text-anchor", "start")
       .text(function(d) { return d.key; });
 
+    // add circle size legend 
+    // var clegend = svg.append("g")
+    //     .attr("class", "clegend")
+    //     .attr("transform", "translate(" + (width - 50) + "," + (height - 20) + ")")
+    //   .selectAll("g")
+    //     .data([1e6, 3e6, 6e6])
+    //   .enter().append("g");
+
+    // clegend.append("circle")
+    //     .attr("cy", function(d) { return -r(d.murder); })
+    //     .attr("r", r);
+
+    // clegend.append("text")
+    //     .attr("y", function(d) { return -2 * r(d.murder); })
+    //     .attr("dy", "1.3em")
+    //     .text(d3.format(".1s"));
+
 
     // calls the tooltip function
     svg.call(tip);
@@ -342,9 +394,6 @@ function smallMultiples(data) {
         .domain([d3.min(data, function (d) { return d[name]; }), 
                  d3.max(data, function (d) { return d[name]; })])
         .range([1, .5]);
-
-    // set color scale for regions
-    var color = d3.scale.category10();
 
     // functions to fade in and fade out the bars on mouseover
     function fade(state_division, opacity) {
@@ -480,8 +529,145 @@ function smallMultiples(data) {
 }
 
 function parallels(data) {
+    // http://bl.ocks.org/mbostock/7586334
 
+    // update dimensions
+    var margin = {top: 30, right: 30, bottom: 10, left: 30},
+        width = 960 - margin.left - margin.right,
+        height = 500 - margin.top - margin.bottom;
 
+    var x = d3.scale.ordinal().rangePoints([0, width], 1),
+        y = {},
+        dragging = {};
+
+    var line = d3.svg.line(),
+        axis = d3.svg.axis().orient("left"),
+        background,
+        foreground;
+
+    var svg = d3.select("#parallelCoords").append("svg")
+        .attr("width", width + margin.left + margin.right)
+        .attr("height", height + margin.top + margin.bottom)
+        .attr("id", "plot")
+        .attr("display", "block")
+        .append("g")
+        .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+    // Extract the list of dimensions and create a scale for each.
+    // console.log("data:", d3.values(data[0]))
+    x.domain(dimensions = d3.keys(data[0]).filter(function(d) {
+        if (d === "state_abb") return false;
+        if (["state_name", "state_region", "state_division"].indexOf(d) > -1) {
+          // console.log("I found a categorical");
+            y[d] = d3.scale.ordinal()
+            .domain(data.map(function(p) { return p[d]; }))
+            .rangePoints([height, 0]);
+        } else {
+            y[d] = d3.scale.linear()
+            .domain(d3.extent(data, function(p) { return +p[d]; })).nice()
+            .range([height, 0]);
+        }
+        return true;
+    }));
+
+    // Add grey background lines for context
+    background = svg.append("g")
+        .attr("class", "background")
+        .selectAll("path")
+        .data(data)
+        .enter().append("path")
+        .attr("d", path);
+
+    // Add colored foreground lines for focus
+    foreground = svg.append("g")
+        .attr("class", "foreground")
+        .selectAll("path")
+        .data(data)
+        .enter().append("path")
+        .style("stroke", function (d) { return color(d.state_division); })
+        .attr("d", path);
+
+    // Add a group element for each dimension
+    var g = svg.selectAll(".dimension")
+        .data(dimensions)
+      .enter().append("g")
+        .attr("class", "dimension")
+        .attr("transform", function(d) { return "translate(" + x(d) + ")"; })
+        .call(d3.behavior.drag()
+          .on("dragstart", function(d) {
+            dragging[d] = this.__origin__ = x(d);
+            background.attr("visibility", "hidden");
+          })
+
+          .on("drag", function(d) {
+            dragging[d] = Math.min(width, Math.max(0, this.__origin__ += d3.event.dx));
+            foreground.attr("d", path);
+            dimensions.sort(function(a, b) { return position(a) - position(b); });
+            x.domain(dimensions);
+            g.attr("transform", function(d) { return "translate(" + position(d) + ")"; })
+          })
+
+          .on("dragend", function(d) {
+            delete this.__origin__;
+            delete dragging[d];
+            transition(d3.select(this)).attr("transform", "translate(" + x(d) + ")");
+            transition(foreground)
+                .attr("d", path);
+            background
+                .attr("d", path)
+                .transition()
+                .delay(500)
+                .duration(0)
+                .attr("visibility", null);
+          }));
+
+    // Add an axis and title.
+    g.append("g")
+        .attr("class", "axis3")
+        .each(function(d) { d3.select(this).call(axis.scale(y[d])); })
+      .append("text")
+        .attr("text-anchor", "middle")
+        .attr("y", -9)
+        .text(String);
+        console.log("string:", String);
+
+    // Add and store a brush for each axis
+    g.append("g")
+        .attr("class", "brush")
+        .each(function(d) { d3.select(this).call(y[d].brush = d3.svg.brush().y(y[d]).on("brushstart", brushstart).on("brush", brush)); })
+      .selectAll("rect")
+        .attr("x", -8)
+        .attr("width", 16);
+
+    function position(d) {
+      var v = dragging[d];
+      return v == null ? x(d) : v;
+    }
+
+    function transition(g) {
+      return g.transition().duration(500);
+    }
+
+    // Returns the path for a given data point.
+    function path(d) {
+      return line(dimensions.map(function(p) { return [position(p), y[p](d[p])]; }));
+    }
+
+    // When brushing, don’t trigger axis dragging.
+    function brushstart() {
+      d3.event.sourceEvent.stopPropagation();
+    }
+
+    // Handles a brush event, toggling the display of foreground lines.
+    function brush() {
+      var actives = dimensions.filter(function(p) { return !y[p].brush.empty(); }),
+          extents = actives.map(function(p) { return y[p].brush.extent(); });
+      foreground.style("display", function(d) {
+        return actives.every(function(p, i) {
+          return extents[i][0] <= d[p] && d[p] <= extents[i][1];
+        }) ? null : "none";
+      });
+    }
 
 }
 
@@ -494,16 +680,17 @@ function parallels(data) {
         <h3>Functionality List</h3>
         <p>The following features were implemented in order to reach each corresponding grade level.</p>
         <span id="c-level" style="font-size: 18"><b>C-Level</b></span><br>
-            <p>Bubble Chart: Implemented with tooltips. </p>
+            <p>Bubble Chart: income, life expectancy, and murder rates, colored by region. Implemented with tooltips. </p>
         <span id="b-level" style="font-size: 18"><b>B-Level</b></span><br>
-            <p></p>
+            <p>Small Multiples: bar charts of state data by statistic. Implemented with tooltips. </p>
         <span id="a-level" style="font-size: 18"><b>A-Level</b></span><br>
+            <p>Parallel Coordinates: lines colored consistently across state divisions.</p>
 
     </section>
     <section>
         <h3>Motivation</h3>
         <p>For the bubble chart, my goal was to examine state income against life expectancy, murder rates, and region. I chose the bubble chart since it felt easier to compare these four dimensions more clearly than a heatmap. I made most of the shapes non-opaque, since things were overlapping substantially. I outlined the circles, and enabled mouseover of regional bubbles to leverage the Gestalt principle of "foreground vs. background." </p>
-        <p>For the small multiples, I made the bars the same color to more easily compare levels. On mouseover, details on the state selected pop up, with other regional states highlighted as well, again, with a focus on foreground vs. background. </p>
+        <p>For the small multiples, I made the bars the same color to more easily compare levels. On mouseover, details on the state selected pop up, with other regional states highlighted as well (again, with a focus on foreground vs. background). Additionally, for parallel coordinates, I wanted to ensure the lines were colored by region, to stay consistent throughout each plot. </p>
     </section>
 </section>
 </body>
