--- a/spring-2015-msan622/SFEmployeeCompensation.html
+++ b/spring-2015-msan622/SFEmployeeCompensation.html
@@ -14,7 +14,7 @@
   <body>
   	<h1>San Francisco Employee Compensation</h1>
   	<h2>Average &amp; Median Salaries, by Department and Job Family</h2>
-  	  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Jeff Baker<br>
+  	  Jeff Baker<br>
       <a href="https://github.com/jbaker22/jbaker22.github.io/tree/master/spring-2015-msan622">Back to Submission Page GitHub Repo</a><br><br>
 <script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script>
 	<div class='tableauPlaceholder' style='width: 982px; height: 742px;'>
