--- a/spring-2015-msan622/homework2.html
+++ b/spring-2015-msan622/homework2.html
@@ -532,6 +532,7 @@ function smallMultiples(data) {
 function parallels(data) {
     // http://bl.ocks.org/mbostock/7586334
     // http://bl.ocks.org/chrisbrich/4173826
+    // https://dexvis.wordpress.com/2013/01/28/d3js-parallel-lines-and-football/
 
     // update dimensions
     var margin = {top: 30, right: 30, bottom: 10, left: 30},
@@ -555,12 +556,14 @@ function parallels(data) {
         .append("g")
         .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
+    categoricals = [];
     // Extract the list of dimensions and create a scale for each.
     // console.log("data:", d3.values(data[0]))
     x.domain(dimensions = d3.keys(data[0]).filter(function(d) {
         if (d === "state_abb") return false;
         if (["state_name", "state_region", "state_division"].indexOf(d) > -1) {
           // console.log("I found a categorical");
+            categoricals.push(d);
             y[d] = d3.scale.ordinal()
             .domain(data.map(function(p) { return p[d]; }))
             .rangePoints([height, 0]);
@@ -661,16 +664,33 @@ function parallels(data) {
     }
 
     // Handles a brush event, toggling the display of foreground lines.
+    // function brush() {
+    //   var actives = dimensions.filter(function(p) { return !y[p].brush.empty(); }),
+    //       extents = actives.map(function(p) { return y[p].brush.extent(); });
+    //   foreground.style("display", function(d) {
+    //     return actives.every(function(p, i) {
+    //       return extents[i][0] <= d[p] && d[p] <= extents[i][1];
+    //     }) ? null : "none";
+    //   });
+    // }
+
     function brush() {
       var actives = dimensions.filter(function(p) { return !y[p].brush.empty(); }),
           extents = actives.map(function(p) { return y[p].brush.extent(); });
+
       foreground.style("display", function(d) {
-        return actives.every(function(p, i) {
-          return extents[i][0] <= d[p] && d[p] <= extents[i][1];
-        }) ? null : "none";
+          return actives.every(function(p, i)
+          {
+              // Categorical
+              if (["state_name", "state_region", "state_division"].indexOf(p) > -1) {
+                  return extents[i][0] <= y[p](d[p]) && y[p](d[p]) <= extents[i][1];
+              } else {
+                  // Numeric
+                  return extents[i][0] <= d[p] && d[p] <= extents[i][1];
+              }
+          }) ? null : "none";
       });
     }
-
 }
 
 
